--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import 'animations.scss';
 @import 'base.scss';
 @import 'flex.scss';
+@import 'global.scss';
 @import 'layout.scss';
 @import 'mixins.scss';
 @import 'variables.scss';
