scss replaced by sass

--- a/src/pages/LoginPage/style.module.sass
+++ b/src/pages/LoginPage/style.module.sass
@@ -1,11 +1,16 @@
 $className: login_page
 
 .#{$className}
-  &__header
-    color: $red
-    +r(lg)
-      color: $blue
-      background: red
+  height: 100vh
+  &__greetScreen
+    background-color: #495570
+    width: 100%
+  &__logo
+    margin: 0 auto
+    w
+  &__form
+    width: 804px
+
 
 
 //.#{$className} {
