--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,10 +1,13 @@
 @import '_animations.sass'
-@import '_global.sass'
 @import '_base.sass'
+@import '_buttons.sass'
 @import '_flex.sass'
+@import '_fonts.sass'
+@import '_global.sass'
 @import '_layout.sass'
 @import '_mixins.sass'
 @import '_variables.sass'
 
 @include margins
 @include paddings
+
