--- a/src/pages/LoginPage/style.module.sass
+++ b/src/pages/LoginPage/style.module.sass
@@ -1,15 +1,32 @@
 $className: login_page
 
 .#{$className}
+  min-height: 871px
   height: 100vh
-  &__greetScreen
-    background-color: #495570
-    width: 100%
-  &__logo
-    margin: 0 auto
-    w
+  &__greet_screen
+    background-color: $primary_color
+    width: 50%
+
+    &_container
+      width: 280px
+      height: 100%
+      margin: 0 auto
+
   &__form
-    width: 804px
+    width: 50%
+
+  &__logo
+    height: 50%
+
+  &__copyright
+    height: 50%
+
+    h4
+      color: $secondary_color
+      font-size: 15px
+      line-height: 21px
+      font-weight: 400
+
 
 
 
