--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -1,10 +1,8 @@
-.wrapper
-  width: 100%
-  height: 100%
+.text-align-center
+  text-align: center
 
-  &-container
-    width: 1645px
-    margin: 0 auto
+.text-align-left
+  text-align: left
 
-
-
+.text-align-right
+  text-align: right
