--- a/src/pages/LoginPage/style.module.sass
+++ b/src/pages/LoginPage/style.module.sass
@@ -1,40 +1,27 @@
-$className: login_page
-
-.#{$className}
+.login_page
   min-height: 871px
   height: 100vh
-  &__greet_screen
-    background-color: $primary_color
-    width: 50%
 
-    &_container
-      width: 280px
-      height: 100%
-      margin: 0 auto
+.greet_screen
+  background-color: $primary_color
+  width: 50%
 
-  &__form
-    width: 50%
+  &_container
+    width: 280px
+    height: 100%
+    margin: 0 auto
 
-  &__logo
-    height: 50%
+.form
+  width: 50%
 
-  &__copyright
-    height: 50%
+.logo
+  height: 50%
 
-    h4
-      color: $secondary_color
-      font-size: 15px
-      line-height: 21px
-      font-weight: 400
+.copyright
+  height: 50%
 
-
-
-
-//.#{$className} {
-//  &__header {
-//    color: $red;
-//    @include r(lg) {
-//      color: $blue;
-//    }
-//  }
-//}
+  h4
+    color: $secondary_color
+    font-size: 15px
+    line-height: 21px
+    font-weight: 400
