--- a/src/styles/_buttons.sass
+++ b/src/styles/_buttons.sass
@@ -2,6 +2,7 @@ $className: btn
 
 .#{$className}
   border: none
+  margin: 16px 0
   text-align: center
   cursor: pointer
   background: none
@@ -17,5 +18,8 @@ $className: btn
 
 
 //Shapes
+.#{$className}.full_width
+  width: 100%
+
 .#{$className}.rounded
   border-radius: 35px
