--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -3,6 +3,7 @@
 @import '_buttons.sass'
 @import '_flex.sass'
 @import '_fonts.sass'
+@import '_form.sass'
 @import '_global.sass'
 @import '_layout.sass'
 @import '_mixins.sass'
