[+] #SQUAD-18 - Added Enter & confirm password input

--- a/src/styles/_buttons.sass
+++ b/src/styles/_buttons.sass
@@ -23,3 +23,10 @@ $className: btn
 
 .#{$className}.rounded
   border-radius: 35px
+
+
+//Other
+.#{$className}.login-page-button
+  font-size: 19px
+  line-height: 23px
+  font-weight: 500
