[+]#SQUAD-24 - Added reusable checkbox component

--- a/src/styles/_form.sass
+++ b/src/styles/_form.sass
@@ -14,7 +14,6 @@
   line-height: 18px
   letter-spacing: 0 !important
 
-
 .form_border
   border: 1px solid $light-gray
   background-color: $dirty-white
@@ -28,4 +27,14 @@
 
 .formik-error
   font-size: 15px
+
+.checkbox
+  appearance: none
+
+.checkmark_checked
+  background: 50% 50% url('/assets/login_page/checkmark.png') no-repeat !important
+  background-size: 18px 19px
+  transition: all 2s
+
+
 
