--- a/src/components/Form/PasswordInput/style.module.sass
+++ b/src/components/Form/PasswordInput/style.module.sass
@@ -3,30 +3,28 @@
 .container
   position: relative
 
-.show_password
-  appearance: none
-  background-color: #fff
-  width: 20px
-  height: 21px
-  //width: 200px
-  //height: 210px
-  border: 1px solid $light-gray
-  position: absolute
-  right: 0
-  align-self: center
-  margin-right: 70px
-
-.show_password:after
-  content: 'Show'
-  display: inline-block
-  margin-left: 30px
-  color: $secondary_color
-  font-size: 15px
-  line-height: 20px
-  font-weight: 400
-
-.checked
-  background: 50% 50% url('/assets/login_page/checkmark.png') no-repeat !important
-  background-size: 18px 19px
+//.show_password
+//  appearance: none
+//  background-color: #fff
+//  width: 20px
+//  height: 21px
+//  border: 1px solid $light-gray
+//  position: absolute
+//  right: 0
+//  align-self: center
+//  margin-right: 70px
+//
+//  &:after
+//    content: 'Show'
+//    display: inline-block
+//    margin-left: 30px
+//    color: $secondary_color
+//    font-size: 15px
+//    line-height: 20px
+//    font-weight: 400
+//
+//.checked
+//  background: 50% 50% url('/assets/login_page/checkmark.png') no-repeat !important
+//  background-size: 18px 19px
 
 
