--- a/src/components/AuthScreenWrapper/style.module.sass
+++ b/src/components/AuthScreenWrapper/style.module.sass
@@ -1,23 +1,43 @@
 .login_page
   height: 100vh
+  +r(lg)
+    flex-direction: column-reverse
 
 .greet_screen
   background-color: $primary_color
   width: 50%
+  +r(lg)
+    width: 100%
+    padding: 10px !important
+    height: 80px
 
   &_container
     width: 280px
     height: 100%
     margin: 0 auto
+    +r(lg)
+      height: auto
 
 .form
   width: 50%
+  +r(lg)
+    width: 100%
+    height: 100%
 
 .logo
   height: 50%
+  +r(lg)
+    justify-content: center
+
+  img
+    +r(lg)
+      align-self: center
+      width: 220px
 
 .copyright
   height: 50%
+  +r(lg)
+    display: none !important
 
   h4
     color: $secondary_color
@@ -27,3 +47,4 @@
 
 .children
   position: relative
+
