--- a/src/components/Preloader/style.module.sass
+++ b/src/components/Preloader/style.module.sass
@@ -4,6 +4,8 @@
   left: 0
   width: 100%
   height: 100%
+  +r(lg)
+    position: inherit
 
 .preloader
   position: absolute
@@ -17,4 +19,7 @@
 
 .children
   height: 100%
+  +r(xl)
+    padding: 0 20px
+
 
