--- a/src/components/Preloader/style.module.sass
+++ b/src/components/Preloader/style.module.sass
@@ -4,7 +4,7 @@
   left: 0
   width: 100%
   height: 100%
-  +r(lg)
+  +r(lgx)
     position: inherit
 
 .preloader
@@ -21,5 +21,6 @@
   height: 100%
   +r(xl)
     padding: 0 20px
+
 
 
