--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -7,7 +7,6 @@
 
 body
   box-sizing: border-box
-
   margin: 0
   padding: 0
 
@@ -16,3 +15,8 @@ ul
 
 a
   text-decoration: none
+
+#root
+  min-height: 100vh
+  display: flex
+  flex-direction: column
