--- a/src/styles/_flex.sass
+++ b/src/styles/_flex.sass
@@ -4,6 +4,9 @@
 .flex-column
   flex-direction: column
 
+.flex-wrap-wrap
+  flex-wrap: wrap
+
 .justify-content-space-between
   justify-content: space-between
 
