[+]#SQUAD-62 - Added login via google & token save

--- a/src/styles/_buttons.sass
+++ b/src/styles/_buttons.sass
@@ -31,3 +31,8 @@ $className: btn
   +r(lg)
     font-size: 16px
     padding: 10px
+
+.#{$className}.google-button
+  border: 1px solid $light-gray
+  color: $primary_color
+  font-weight: 400
