--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -1,11 +1,18 @@
 // colors
 $primary_color: #495570
+$primary_color-disabled: #A4AAB7
+$primary-color-hover: #596785
+$primary-color-active: #3B4661
 $secondary_color: #9398A2
 $light-gray: #CACACA
+$lightest-gray: #EBEEF4
 $white: #FFFFFF
 $dirty-white: #F8F8F8
 $green: #28B446
 $sea-green: #53D0BA
+$sea-green-disabled: #A9E7DC
+$sea-green-hover: #52EACF
+$sea-green-active: #3BD1B7
 $blue: #518EF8
 $pale-orange: #FB9082
 $red: #F14336
