--- a/src/components/Form/FormTemplate/style.module.sass
+++ b/src/components/Form/FormTemplate/style.module.sass
@@ -1,6 +1,6 @@
 .container
   //max-height: 500px
-  max-width: 496px
+  max-width: 499px
   min-width: 300px
   width: 100%
   +r(lgx)
@@ -24,15 +24,13 @@
       padding: 0 !important
       margin-bottom: 15px !important
 
-    h4, a
-      color: $secondary_color
-      font-size: 15px
-      line-height: 18px
-      font-weight: 400
-      +r(lg)
-        font-size: 12px
-
-    a:hover
-      text-decoration: underline
+  &_small *
+    color: $secondary_color
+    font-size: 15px
+    line-height: 18px
+    font-weight: 400
+    +r(lg)
+      font-size: 12px
 
   &_content
+
