--- a/src/styles/_global.sass
+++ b/src/styles/_global.sass
@@ -1,5 +1,7 @@
 body, button
   font-family: 'Roboto', sans-serif
+  outline: none
 
 input, button
+  font-family: 'Roboto', sans-serif
   outline: none
