[*]#SQUAD-87 - Added emails list design on setTeamPage

--- a/src/styles/_form.sass
+++ b/src/styles/_form.sass
@@ -15,12 +15,14 @@
   line-height: 18px
   letter-spacing: 0 !important
 
-.form_border
-  border: 1px solid $light-gray
+.form_background
   background-color: $dirty-white
 
+.form_border
+  border: 1px solid $light-gray
+
 .form_border_focus
-  border-color: rgba(73,85,112,0.6)
+  border: 1px solid rgba(73,85,112,0.6)
 
 .form_link
   text-decoration: underline
