--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -8,6 +8,7 @@ $light-gray: #CACACA
 $lightest-gray: #EBEEF4
 $white: #FFFFFF
 $dirty-white: #F8F8F8
+$scroll: #D3D3D3
 $green: #28B446
 $sea-green: #53D0BA
 $sea-green-disabled: #A9E7DC
