[*]#SQUAD-87 - Added emails list on first project page

--- a/src/components/Form/RenderListDelete/style.module.sass
+++ b/src/components/Form/RenderListDelete/style.module.sass
@@ -1,5 +1,8 @@
+.container
+  cursor: pointer
+
 .deleteButton
   display: flex
   justify-content: center
   align-items: center
-  cursor: pointer
+
