[*]#SQUAD-87 - Fixed adaptive design for first project page

--- a/src/components/Preloader/style.module.sass
+++ b/src/components/Preloader/style.module.sass
@@ -4,8 +4,8 @@
   left: 0
   width: 100%
   height: 100%
-  +r(lgx)
-    position: inherit
+  //+r(lgx)
+  //  position: inherit
 
 .preloader
   position: absolute
