--- a/src/styles/_form.sass
+++ b/src/styles/_form.sass
@@ -49,9 +49,11 @@
   background: 50% 50% url('/assets/login_page/checkmark.svg') no-repeat !important
   //background-size: 8px 9px
 
-.fill_green
-  fill: $sea-green
-  opacity: 1
+.show-password
+  background: 50% 50% url('/assets/login_page/show_password.svg') no-repeat !important
+
+.hide-password
+  background: 50% 50% url('/assets/login_page/hide_password.svg') no-repeat !important
 
 
 
