[+]#SQUAD-110 - Modal window (status 500 handler)

--- a/src/styles/_form.sass
+++ b/src/styles/_form.sass
@@ -7,6 +7,7 @@
   line-height: 22px
   letter-spacing: normal
   width: 100%
+  box-shadow: none
 
 .default_input::placeholder
   color: $light-gray
