--- a/src/components/Modal/_components/Handler500/style.module.sass
+++ b/src/components/Modal/_components/Handler500/style.module.sass
@@ -1,13 +1,41 @@
 .wrapper
-  padding: 60px
+  position: relative
+  width: 100%
+  padding: 24px 24px 8px 24px
   background-color: #fff
+  border-radius: 9px
+  box-shadow: 0 2px 10px 0rgba(0,0,0,0.11)
+  display: flex
+  flex-direction: column
+  align-items: center
 
 .container
 
-.article
+.message
   article
-    font-weight: 700
-    font-size: 24px
-    color: red
+    font-weight: 400
+    font-size: 26px
+    color: $primary_color
+    text-align: center
+
+  p
+    font-weight: 400
+    font-size: 15px
+    color: $primary_color
+    text-align: center
 
 .button
+  max-width: 259px
+  width: 100%
+
+  button
+    font-weight: 500
+    font-size: 19px
+
+.close
+  position: absolute
+  top: 0
+  right: 0
+
+  button
+    margin: 0
