[+]#SQUAD-103 - Added success message & fix bugs

--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -14,6 +14,7 @@ $sea-green: #53D0BA
 $sea-green-disabled: #A9E7DC
 $sea-green-hover: #52EACF
 $sea-green-active: #3BD1B7
+$success-message: #53D0BA
 $blue: #518EF8
 $pale-orange: #FB9082
 $red: #F14336
