[*]#SQUAD-103 - Fixed error handling on set new password page

--- a/src/styles/_form.sass
+++ b/src/styles/_form.sass
@@ -8,6 +8,7 @@
   letter-spacing: normal
   width: 100%
   box-shadow: none
+  padding-left: 55px
 
 .default_input::placeholder
   color: $light-gray
