[+]#SQUAD-136 - Added nav buttons animation

--- a/src/components/sidebar/LinkButton/style.module.sass
+++ b/src/components/sidebar/LinkButton/style.module.sass
@@ -1,2 +1,21 @@
+.notification
+  width: 14px
+  height: 14px
+  border-radius: 50%
+  //background-color: yellow
+  display: flex
+  justify-content: center
+  align-items: center
+  position: absolute
+  right: 25%
+  bottom: 35%
+  background-color: $primary_color
 
+.circle
+  width: 12px
+  height: 12px
+  border-radius: 50%
+  background-color: $scarlet
 
+.icon
+  height: 24px
