--- a/src/styles/_animations.sass
+++ b/src/styles/_animations.sass
@@ -1,15 +1,20 @@
-//@keyframes sidebarSlideButtonsHide
-//  0%
-//    transform: translateX(-100%)
-//  70%
-//    flex-direction: column
-//  100%
-//    transform: translateX(5%)
-//
-//@keyframes sidebarSlideButtonsShow
-//  0%
-//    transform: translateX(-100%)
-//  70%
-//    flex-direction: row
-//  100%
-//    transform: translateX(0)
++keyframe(sidebarSlideButtonsHide)
+  0%
+    transform: translateX(-100%)
+  70%
+    flex-direction: column
+  100%
+    transform: translateX(0)
+
++keyframe(sidebarSlideButtonsShow)
+  0%
+    transform: translateX(-100%)
+  70%
+    flex-direction: row
+  100%
+    transform: translateX(0)
+
+
+
+
+
