--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -22,5 +22,14 @@
 .h-66
   height: 66%
 
+.rotate-90
+  transform: rotate(90deg)
+  transition: transform 0.4s ease
+
 .rotate-180
   transform: rotate(180deg)
+  transition: transform 0.4s ease
+
+.rotate-270
+  transform: rotate(270deg)
+  transition: transform 0.4s ease
