--- a/src/styles/_mixins.sass
+++ b/src/styles/_mixins.sass
@@ -47,3 +47,36 @@
       @content
 
 
+// Animation
+=keyframe($animation_name)
+  @-webkit-keyframes #{$animation-name}
+    @content
+  @-moz-keyframes #{$animation-name}
+    @content
+  @-o-keyframes #{$animation-name}
+    @content
+  @keyframes #{$animation-name}
+    @content
+
+
+=animation($name, $delay, $duration)
+  -webkit-animation-delay: $delay
+  -webkit-animation-duration: $duration
+  -webkit-animation-name: $name
+  -webkit-animation-fill-mode: forwards
+
+  -moz-animation-delay: $delay
+  -moz-animation-duration: $duration
+  -moz-animation-name: $name
+  -moz-animation-fill-mode: forwards
+
+  -o-animation-delay: $delay
+  -o-animation-duration: $duration
+  -o-animation-name: $name
+  -o-animation-fill-mode: forwards
+
+  animation-delay: $delay
+  animation-duration: $duration
+  animation-name: $name
+  animation-fill-mode: forwards
+
