[+]#SQUAD-136 - Use animations on sidebar

--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/style.module.sass
@@ -36,15 +36,14 @@
 
 
 .info
-  transition: height 0.4s ease-in-out
+  transition: height 0.2s ease-in-out
   z-index: 10
   overflow: hidden
-  //display: table
-
-.shown
-  //min-height: 150px
-  //height: 150px
-
-.hidden
   height: 0
+
+//.shown
+//  //height: 380px
+//
+//.hidden
+//  height: 0 !important
 
