--- a/src/components/SidebarWrapper/style.module.sass
+++ b/src/components/SidebarWrapper/style.module.sass
@@ -52,16 +52,16 @@
   border-bottom: 1px solid rgba(147, 152, 162, 0.2)
 
 .links_horizontal
-  width: 237px
-  transform: translateX(0)
+  //width: 237px
+  //transform: translateX(0)
   +animation(sidebarSlideButtonsShow, 0s, 0.8s)
 
 .links_vertical
-  width: 84px
-  margin-right: 10px
-  padding: 10px 10px 24px 10px
-  flex-direction: column
-  transform: translateX(0)
+  //width: 84px
+  //margin-right: 10px
+  //padding: 10px 10px 24px 10px
+  //flex-direction: column
+  //transform: translateX(0)
   +animation(sidebarSlideButtonsHide, 0, 0.8s)
 
   a:first-child
