--- a/src/styles/_animations.sass
+++ b/src/styles/_animations.sass
@@ -1,19 +1,47 @@
 +keyframe(sidebarSlideButtonsHide)
   0%
-    transform: translateX(-100%)
-  70%
-    flex-direction: column
-  100%
+    flex-direction: row
+    width: 237px
     transform: translateX(0)
+  30%
+    flex-direction: row
+    width: 237px
+    transform: translateX(-1500%)
+  90%
+    flex-direction: column
+    width: 84px
+  100%
+    width: 84px
+    margin-right: 10px
+    padding: 10px 10px 24px 10px
+    flex-direction: column
+    transform: translateX(0)
+
+
 
 +keyframe(sidebarSlideButtonsShow)
   0%
-    transform: translateX(-100%)
-  70%
-    flex-direction: row
-  100%
+    //flex-direction: column
+    width: 84px
     transform: translateX(0)
+  30%
+    //flex-direction: column
+    width: 84px
+    transform: translateX(-1500%)
+  90%
+    flex-direction: row
+    width: 237px
+  100%
+    flex-direction: row
+    transform: translateX(0)
+    width: 237px
 
+
+//+keyframe(sidebarSlideProjectShown)
+//  0%
+//    width: 0
+//  100%
+//    width
 
 
 
