[*]#SQUAD-136 - Fixed sidebar view & animation

--- a/src/components/SidebarWrapper/_components/TeamsButtons/style.module.sass
+++ b/src/components/SidebarWrapper/_components/TeamsButtons/style.module.sass
@@ -9,13 +9,13 @@
     flex-direction: row
     height: 49px
     transform: translateX(0)
-    +animation(sidebarSlideButtonsShow, 0, 0.8s)
+    +animation(sidebarSlideTeamsButtonsShow, 0, 0.4s)
 
   &_hidden
     height: 133px
     flex-direction: column
     transform: translateX(0)
-    +animation(sidebarSlideButtonsHide, 0, 0.8s)
+    +animation(sidebarSlideTeamsButtonsHide, 0, 0.4s)
 
 
 .choose_team
