--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsFolder/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsFolder/style.module.sass
@@ -1,21 +1,25 @@
-.icon_container
-  min-height: 100%
-
-.folder_empty
-
-.folder
-  position: absolute
-  top: 20%
-  left: 0
-  opacity: 0
-  transition: opacity 0.2s ease
+.container
+  margin-left: 20px
 
 .boards_container
-  transition: height 0.2s ease-in-out
   z-index: 10
-  height: 0
+  max-height: 0
   overflow: hidden
+  transform: translateZ(0)
 
 .shown
+  max-height: 3000px
+  transition: all 0.4s ease-in-out
 
 .hidden
+  max-height: 0
+  transition: all 0.4s cubic-bezier(0, 1, 0, 1)
+
+.overlay
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  z-index: 15
+  cursor: pointer
