--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/style.module.sass
@@ -5,67 +5,39 @@
 .container
   padding: 16px
 
-.circle
-  width: 40px
-  height: 40px
-  border-radius: 50%
-
-.team_name
-  font-weight: 700
-  font-size: 19px
-  line-height: 23px
-  color: #fff
-
-.headline
+.tittle_container
   flex-grow: 1
-
-  &_text
-    font-weight: 700
-    font-size: 16px
-    line-height: 19px
-    color: #fff
-    width: 100%
-
-//.headline::after
-//  visibility: hidden
-//  content: ''
-//  transition: visibility 0s, opacity 0.4s ease
-//  opacity: 0
-//
-//.headline:hover::after
-//  visibility: visible
-//  content: ''
-//  color: red
-//  width: 26px
-//  height: 26px
-//  margin-right: 12px
-//  background: url('/assets/sidebar/settings_icon.svg') no-repeat
-//  background-position: 50% 50%
-//  opacity: 1
-
-
-//&_button
-  //  margin: 0
+  cursor: pointer
 
 .settings_icon
   height: 13px
   width: 13px
 
 .switch_buttons
-  //position: absolute
-  //right: 0
-  //top: 25%
-
 
 .info
-  transition: height 0.2s ease-in-out
   z-index: 10
   overflow: hidden
-  height: 0
+  max-height: 0
+  transform: translateZ(0)
 
-//.shown
-//  //height: 380px
-//
-//.hidden
-//  height: 0 !important
+  &_container
+    padding-top: 12px
+
+.shown
+  max-height: 3000px
+  transition: max-height 0.4s ease-in-out
+
+.hidden
+  max-height: 0
+  transition: max-height 0.4s cubic-bezier(0, 1, 0, 1)
+
+.overlay
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  z-index: 15
+  cursor: pointer
 
