--- a/src/components/SidebarWrapper/style.module.sass
+++ b/src/components/SidebarWrapper/style.module.sass
@@ -51,6 +51,7 @@
   min-height: 80px
   border-bottom: 1px solid rgba(147, 152, 162, 0.2)
   transition: min-height 0.2s ease
+  transform: translateZ(0)
 
 .links_horizontal
   min-height: 79px
