--- a/src/styles/_flex.sass
+++ b/src/styles/_flex.sass
@@ -7,6 +7,9 @@
 .flex-wrap-wrap
   flex-wrap: wrap
 
+.flex-wrap-nowrap
+  flex-wrap: nowrap
+
 .justify-content-space-between
   justify-content: space-between
 
