[+]#SQUAD-202 - Added sidebar scrollbar customization

--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/style.module.sass
@@ -9,6 +9,9 @@
   flex-grow: 1
   cursor: pointer
 
+.float_left
+  justify-content: flex-start !important
+
 .settings_icon
   height: 13px
   width: 13px
