--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsHeadline/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsHeadline/style.module.sass
@@ -2,6 +2,7 @@
   width: 40px
   height: 40px
   border-radius: 50%
+  margin: auto
 
 .team_name
   font-weight: 700
@@ -18,3 +19,5 @@
     line-height: 19px
     color: #fff
     width: 100%
+
+
