--- a/src/components/SidebarWrapper/_components/TeamsButtons/style.module.sass
+++ b/src/components/SidebarWrapper/_components/TeamsButtons/style.module.sass
@@ -3,19 +3,20 @@
 .container
   overflow: hidden
   border-top: 1px solid rgba(147, 152, 162, 0.2)
-  transition: height 0.8s ease-in-out
+  transition: height 0.1s ease-in-out
 
   &_shown
-    flex-direction: row
+    //flex-direction: row
     height: 49px
+    //width: 50%
     transform: translateX(0)
-    +animation(sidebarSlideTeamsButtonsShow, 0, 0.4s)
+    //+animation(sidebarSlideTeamsButtonsShow, 0, 0.4s)
 
   &_hidden
     height: 133px
-    flex-direction: column
+    //flex-direction: column
     transform: translateX(0)
-    +animation(sidebarSlideTeamsButtonsHide, 0, 0.4s)
+    //+animation(sidebarSlideTeamsButtonsHide, 0, 0.4s)
 
 
 .choose_team
@@ -44,10 +45,14 @@
 
 .shown
   display: flex
-  flex-direction: row
+  width: 50%
+  //min-width: 136px
+  ////max-width: 50%
+  //flex-direction: row
 
 .hidden
   display: flex
+  width: 100%
   flex-direction: column
   border-right: none !important
   border-left: none !important
