[+]#SQUAD-206 - Add sidebar dropdown

--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsHeadline/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsHeadline/style.module.sass
@@ -17,7 +17,11 @@
     font-weight: 700
     font-size: 16px
     line-height: 19px
-    color: #fff
     width: 100%
+    color: #9199A9
+    transition: color 0.2s ease
+
+.white_text
+  color: #fff !important
 
 
