--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/style.module.sass
@@ -1,6 +1,6 @@
 .wrapper
   border-bottom: 1px solid rgba(147, 152, 162, 0.2)
-  border-top: 1px solid rgba(147, 152, 162, 0.2)
+  //border-top: 1px solid rgba(147, 152, 162, 0.2)
 
 .container
   padding: 16px
