[*]#SQUAD-206 - Fix displaying of dropdow menus

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -8,6 +8,7 @@
 @import '_global.sass'
 @import '_layout.sass'
 @import '_mixins.sass'
+@import '_tooltips.sass'
 @import '_variables.sass'
 
 @include margins
