--- a/src/components/Form/Dropdown/SidebarProjectSettings/_components/DropdownSettingsButton/style.module.sass
+++ b/src/components/Form/Dropdown/SidebarProjectSettings/_components/DropdownSettingsButton/style.module.sass
@@ -1,19 +1,17 @@
-.container
-  display: flex
-  padding: 1px
-  border-bottom: 1px solid lighten(#838995, 30%)
+// Index options
+.icon_container
+  padding: 9px
+
+.delete_button
   background-color: transparent
   transition: background-color 0.2s ease
   border-radius: 3px
-  width: 172px
+  width: 160px
 
-.container:hover
+.delete_button:hover
   background-color: lighten(#838995, 40%)
 
-.icon_container
-  padding: 8px
-
-.title
+.delete_title
   font-size: 13px
   line-height: 37px
   font-weight: 400
