[*]#SQUAD-204 - Added connection lost error message

--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -18,5 +18,6 @@ $success-message: #53D0BA
 $blue: #518EF8
 $pale-orange: #FB9082
 $red: #F14336
+$pale-red: #FF778C
 $yellow: #FBBB00
 $scarlet: #E76A7D
