[*]#SQUAD-207 - Fixed on set password screen when user has changed the password and follows the same link again

--- a/src/components/Modal/Modal.module.sass
+++ b/src/components/Modal/Modal.module.sass
@@ -1,6 +1,7 @@
 .overlay
   position: fixed
-  background-color: rgb(59, 57, 58)
+  background-color: rgba(73,85,112,0.85)
+  //background-color: rgb(59, 57, 58)
   //background-color: rgba(59, 57, 58, 0.7)
   opacity: 0
   z-index: 100
@@ -18,6 +19,7 @@
     opacity: 0.3
 
 .modalWindow
+  max-width: 590px
   width: 100%
   position: fixed
   z-index: 120
@@ -33,7 +35,6 @@
 
 .modalWrapper
   margin: auto
-  max-width: 590px
 
 .modalContainer
   background-color: transparent
