--- a/src/pages/UserPages/UserSettingsPage/_components/UserProfileSidebar/style.module.sass
+++ b/src/pages/UserPages/UserSettingsPage/_components/UserProfileSidebar/style.module.sass
@@ -5,6 +5,12 @@
   height: 100%
   border-bottom-left-radius: 8px
   border-top-left-radius: 8px
+  padding-bottom: 40px
 
-
+.add_button
+  button
+    font-weight: 400
+    font-size: 12px
+    line-height: 26px
+    color: $primary_color
 
