--- a/src/pages/UserPages/UserSettingsPage/style.module.sass
+++ b/src/pages/UserPages/UserSettingsPage/style.module.sass
@@ -1,12 +1,12 @@
 .wrapper
   background-color: $primary_color
-  height: 100vh
+  min-height: 100vh
   padding: 70px 0
 
 .container
   max-width: 1220px
   width: 100%
-  height: 100%
+  height: auto
   border-radius: 8px
   background-color: #FFFFFF
   box-shadow: 0 1px 9px 0 rgba(0,0,0,0.1)
