--- a/src/components/Modal/Modal.module.sass
+++ b/src/components/Modal/Modal.module.sass
@@ -4,7 +4,7 @@
   //background-color: rgb(59, 57, 58)
   //background-color: rgba(59, 57, 58, 0.7)
   opacity: 0
-  z-index: 1000
+  //z-index: 1000
   height: 100%
   width: 100%
   top: 0
@@ -16,13 +16,13 @@
     padding-left: 17px
 
   &_shown
-    opacity: 0.3
+    opacity: 0.9
 
 .modalWindow
-  max-width: 590px
+  max-width: 590px //TODO check it
   width: 100%
   position: fixed
-  z-index: 1001
+  //z-index: 1001
   top: 50%
   left: 50%
   transform: translateX(-50%) translateY(-50%) scale(0.2, 0.2)
