--- a/src/components/Modal/_components/ModalCloseConfirm/style.module.sass
+++ b/src/components/Modal/_components/ModalCloseConfirm/style.module.sass
@@ -1,2 +1,41 @@
+.overlay
+  position: fixed
+  background-color: rgba(73,85,112,0.85)
+  //background-color: rgb(59, 57, 58)
+  //background-color: rgba(59, 57, 58, 0.7)
+  opacity: 0
+  height: 100%
+  width: 100%
+  top: 0
+  left: 0
+  padding-right: 17px
+  transition: opacity 0.2s ease-in-out
+  +r(lg)
+    padding-left: 17px
+
+  &_shown
+    opacity: 0.9
+
 .wrapper
   background-color: #fff
+  border-radius: 9px
+  padding: 40px
+  width: 360px
+  position: fixed
+  z-index: 1001
+  top: 50%
+  left: 50%
+  transform: translateX(-50%) translateY(-50%) scale(0.2, 0.2)
+  opacity: 0
+  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out
+  box-shadow: 0 2px 10px 0rgba(0,0,0,0.11)
+
+  &_shown
+    opacity: 1
+    transform: translateX(-50%) translateY(-50%) scale(1, 1)
+
+.message
+  p
+    font-weight: 400
+    font-size: 26px
+    color: $primary_color
