--- a/src/components/Modal/Modal.module.sass
+++ b/src/components/Modal/Modal.module.sass
@@ -19,24 +19,30 @@
     opacity: 0.9
 
 .modalWindow
-  max-width: 590px //TODO check it
+  max-width: 1220px
   width: 100%
   position: fixed
   //z-index: 1001
   top: 50%
   left: 50%
+  margin: auto
   transform: translateX(-50%) translateY(-50%) scale(0.2, 0.2)
   opacity: 0
   transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out
+  overflow: scroll
+  +r(lg)
+    height: 100vh
 
   &_shown
     opacity: 1
     transform: translateX(-50%) translateY(-50%) scale(1, 1)
 
 .modalWrapper
-  margin: auto
+  height: 100%
+
 
 .modalContainer
+  position: relative
   background-color: transparent
   width: 100%
   height: 100%
