--- a/src/components/Modal/_components/UserSettings/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/style.module.sass
@@ -5,9 +5,9 @@
   background-color: #FFFFFF
   box-shadow: 0 1px 9px 0 rgba(0,0,0,0.1)
   display: flex
-  overflow: scroll
+  overflow: auto
 
-@media screen and (max-height: 800px)
+@media screen and (max-height: 888px)
   .container
     height: 100vh
 
