--- a/src/components/Modal/Modal.module.sass
+++ b/src/components/Modal/Modal.module.sass
@@ -29,9 +29,7 @@
   transform: translateX(-50%) translateY(-50%) scale(0.2, 0.2)
   opacity: 0
   transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out
-  overflow: auto
-  +r(lg)
-    height: 100vh
+  overflow: hidden
 
   &_shown
     opacity: 1
