--- a/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/style.module.sass
@@ -2,7 +2,8 @@
   width: 100%
   max-width: 260px
   background-color: #F7F7F7
-  height: 100%
+  //height: 100%
+  //max-height: 882px
   border-bottom-left-radius: 8px
   border-top-left-radius: 8px
   padding-bottom: 40px
@@ -13,4 +14,5 @@
     font-size: 12px
     line-height: 26px
     color: $primary_color
+
 
