--- a/src/components/Modal/_components/UserSettings/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/style.module.sass
@@ -1,22 +1,24 @@
 .container
   max-width: 1220px
   width: 100%
+  max-height: 882px
   border-radius: 8px
   background-color: #FFFFFF
   box-shadow: 0 1px 9px 0 rgba(0,0,0,0.1)
   display: flex
-  overflow: auto
-
-@media screen and (max-height: 888px)
-  .container
-    height: 100vh
-
-//@media screen and (max-height: 800px)
-//  .container
-//    height: auto
-
-
 
 .children
-  height: 100%
+  //height: 100%
+  //max-height: 882px
   width: 100%
+  //overflow: auto
+
+//@media screen and (max-height: 888px)
+//  .container
+//    height: 100vh
+
+.profile
+  padding: 15px
+
+
+
