[*]#SQUAD-213 - Added list of teams (settings page)

--- a/src/components/Modal/_components/UserSettings/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/style.module.sass
@@ -8,17 +8,31 @@
   display: flex
 
 .children
-  //height: 100%
-  //max-height: 882px
   width: 100%
-  //overflow: auto
 
-//@media screen and (max-height: 888px)
-//  .container
-//    height: 100vh
+.scroll_container
+  height: 100%
+  max-height: 740px
 
-.profile
-  padding: 15px
+.button_block
+  display: flex
+  margin-top: 20px
+  margin-bottom: 35px
+  //height: 100%
+  max-height: 116px
+
+  button
+    max-width: 201px
+    font-weight: 400
+
+  button:first-child
+    font-size: 19px
+    line-height: 23px
+
+  button:last-child
+    font-size: 14px
+    line-height: 16px
+
 
 
 
