--- a/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/style.module.sass
@@ -2,11 +2,15 @@
   width: 100%
   max-width: 260px
   background-color: #F7F7F7
-  //height: 100%
-  //max-height: 882px
+  //height: 100vh
+  max-height: 882px
   border-bottom-left-radius: 8px
   border-top-left-radius: 8px
   padding-bottom: 40px
+
+@media screen and (min-height: 560px)
+  .wrapper
+    height: 100%
 
 .add_button
   button
