[+]#SQUAD-213 - Added navigation on the settings page

--- a/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/_components/UserProfileSidebarTeams/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/_components/UserProfileSidebarTeams/style.module.sass
@@ -8,6 +8,12 @@
   border-radius: 50%
   margin: auto
 
+  &_placeholder
+    width: 42px
+    height: 32px
+    border-radius: 50%
+    margin: auto
+
 .headline_text
   font-weight: 400
   font-size: 15px
