--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsHeadline/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsHeadline/style.module.sass
@@ -24,4 +24,8 @@
 .white_text
   color: #fff !important
 
-
+.team_placeholder
+  height: 15px
+  width: 100%
+  background-color: lightgray
+  align-self: center
