--- a/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfileTabsWrapper/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfileTabsWrapper/style.module.sass
@@ -5,5 +5,14 @@
 .tittle_container
   border-bottom: 1px solid #d7d7d7
 
+.title
+  font-size: 19px
+  line-height: 16px
+  color: $primary_color
+  font-weight: 400
+
+.tab
+  font-weight: 500 !important
+
 .children
   height: 100%
