[+]#SQUAD-213 - Added user profile tab for settings

--- a/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfileTabsWrapper/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfileTabsWrapper/style.module.sass
@@ -1,5 +1,6 @@
 .container
-  padding: 40px
+  padding: 40px 40px 0 40px
+  margin-bottom: 40px
   flex-grow: 1
 
 .tittle_container
@@ -16,3 +17,11 @@
 
 .children
   height: 100%
+
+.close
+  position: absolute
+  top: 0
+  right: 0
+
+  button
+    margin: 0
