--- a/src/styles/_form.sass
+++ b/src/styles/_form.sass
@@ -8,8 +8,6 @@
   letter-spacing: normal
   width: 100%
   box-shadow: none
-  padding-left: 55px
-  padding-right: 50px
 
 .default_input::placeholder
   color: $light-gray
@@ -21,11 +19,21 @@
 .form_background
   background-color: $dirty-white
 
+// Border
 .form_border
   border: 1px solid $light-gray
 
+.form_border_bottom
+  border-bottom: 1px solid
+
+.form_border_rounded
+    border-radius: 2px
+
 .form_border_focus
   border: 1px solid rgba(73,85,112,0.6)
+
+.form_border_gray
+  border-color: $light-gray
 
 .form_link
   text-decoration: underline
@@ -58,5 +66,9 @@
 .hide-password
   background: 50% 50% url('/assets/login_page/hide_password.svg') no-repeat !important
 
-
+.label_settings
+  font-size: 13px
+  line-height: 30px
+  font-weight: 500
+  color: $primary_color
 
