[+]#SQUAD-250 - Added user profile: change email modal

--- a/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/_components/UserProfileSidebarTeams/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/_components/UserProfileSidebarTeams/style.module.sass
@@ -5,13 +5,13 @@
 .circle
   width: 32px
   height: 32px
-  border-radius: 50%
+  border-radius: 5px
   margin: auto
 
   &_placeholder
     width: 42px
     height: 32px
-    border-radius: 50%
+    border-radius: 5px
     margin: auto
 
 .headline_text
