--- a/src/components/Modal/_components/ModalLabelWrapper/style.module.sass
+++ b/src/components/Modal/_components/ModalLabelWrapper/style.module.sass
@@ -1,11 +1,27 @@
 .wrapper
+  position: relative
+  margin: auto
   padding: 40px
-  background-color: $white
   max-width: 518px
   width: 100%
+  background-color: $white
+  border-radius: 8px
+  box-shadow: 0 1px 9px 0 rgba(0,0,0,0.1)
+
+.container
+  padding-bottom: 24px
 
 .label
   font-size: 16px
   line-height: 20px
   color: $primary_color
   font-weight: 400
+
+
+.close
+  position: absolute
+  top: 40px
+  right: 40px
+
+  button
+    margin: 0
