--- a/src/components/Modal/Modal.module.sass
+++ b/src/components/Modal/Modal.module.sass
@@ -19,8 +19,9 @@
     opacity: 0.9
 
 .modalWindow
-  max-width: 1220px
+  //max-width: 1220px
   width: 100%
+  height: 100%
   position: fixed
   //z-index: 1001
   top: 50%
@@ -30,18 +31,13 @@
   opacity: 0
   transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out
   overflow: hidden
+  display: flex
+  justify-content: center
+  align-items: center
 
   &_shown
     opacity: 1
     transform: translateX(-50%) translateY(-50%) scale(1, 1)
 
-.modalWrapper
-  height: 100%
 
-
-.modalContainer
-  position: relative
-  background-color: transparent
-  width: 100%
-  height: 100%
 
