[+]#SQUAD-259 - Added change user email with cropper

--- a/src/components/Modal/_components/ModalLabelWrapper/style.module.sass
+++ b/src/components/Modal/_components/ModalLabelWrapper/style.module.sass
@@ -2,7 +2,7 @@
   position: relative
   margin: auto
   padding: 40px
-  max-width: 518px
+  //max-width: 518px
   width: 100%
   background-color: $white
   border-radius: 8px
