--- a/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
@@ -12,12 +12,17 @@
   width: 100%
   height: 100%
   background-color: #82ABFB
+  overflow: hidden
 
   &_placeholder
     padding-top: 5px
     color: #fff
     font-size: 72px
     font-weight: 500
+
+  img
+    width: 110px
+
 
 .edit
   display: flex
@@ -29,7 +34,9 @@
   font-size: 14px
   font-weight: 400
   line-height: 16px
-  cur
+
+.label:hover
+  text-decoration: underline
 
 .file_input
   display: none
