[*]#SQUAD-257 - Added Change Password success modal window

--- a/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
@@ -15,14 +15,14 @@
   overflow: hidden
 
   &_placeholder
-    padding-top: 5px
+    padding-top: 2px
     color: #fff
     font-size: 72px
     font-weight: 500
 
   img
     width: 110px
-
+    padding-bottom: 3px
 
 .edit
   display: flex
