--- a/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
@@ -7,22 +7,28 @@
   height: 100px
 
 .avatar
-  border: 1.26px solid #E3E3E3
+  width: 99%
+  height: 99%
+  background-color: red
   border-radius: 50%
-  width: 100%
-  height: 100%
-  background-color: #82ABFB
-  overflow: hidden
+
+  /* overflow: hidden; */
 
   &_placeholder
-    padding-top: 2px
+    //padding-top: 2px
     color: #fff
     font-size: 72px
     font-weight: 500
 
   img
-    width: 110px
-    padding-bottom: 3px
+    //width: calc(110px + 1%)
+    width: 100%
+    min-width: 105px
+    border-radius: 50%
+    border: 1.26px solid #E3E3E3
+
+
+
 
 .edit
   display: flex
