[+]#SQUAD-250 - Added logout button (user profile)

--- a/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
@@ -9,31 +9,23 @@
 .avatar
   width: 99%
   height: 99%
-  background-color: red
+  background-color: #82ABFB
   border-radius: 50%
 
-  /* overflow: hidden; */
-
   &_placeholder
-    //padding-top: 2px
     color: #fff
     font-size: 72px
     font-weight: 500
 
   img
-    //width: calc(110px + 1%)
     width: 100%
     min-width: 105px
     border-radius: 50%
     border: 1.26px solid #E3E3E3
 
-
-
-
 .edit
   display: flex
   justify-content: center
-
 
 .label
   color: $primary_color
