--- a/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileForm/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileForm/style.module.sass
@@ -11,4 +11,10 @@
   height: 36px
   background-color: transparent !important
 
-
+.logout
+  button
+    width: 100%
+    max-width: 181px
+    font-size: 15px
+    line-height: 18px
+    font-weight: 400
