--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsHeadline/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsHeadline/style.module.sass
@@ -2,6 +2,8 @@
   width: 40px
   height: 40px
   border-radius: 50%
+
+.align_center
   margin: auto
 
 .team_name
@@ -12,6 +14,7 @@
 
 .headline
   flex-grow: 1
+  max-width: 136px
 
   &_text
     font-weight: 700
@@ -20,6 +23,9 @@
     width: 100%
     color: #9199A9
     transition: color 0.2s ease
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: pre
 
 .white_text
   color: #fff !important
