[+]#SQUAD-136 - Added team changing & team's projects changing

--- a/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/_components/UserProfileSidebarTeams/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserProfileSidebar/_components/UserProfileSidebarTeams/style.module.sass
@@ -1,12 +1,7 @@
-.container
-  display: flex
-  border-bottom: 1px solid lighten($light-gray, 5%)
+.container:hover
+  background-color: lighten(#838995, 40%)
 
-.circle
-  width: 32px
-  height: 32px
-  border-radius: 5px
-  margin: auto
+.square
 
   &_placeholder
     width: 42px
@@ -15,15 +10,6 @@
     margin: auto
 
 .headline_text
-  font-weight: 400
-  font-size: 15px
-  line-height: 26px
-  color: $primary_color
   width: 100%
 
-.team_name
-  font-weight: 700
-  font-size: 19px
-  line-height: 23px
-  color: #fff
-  //padding-left: 1px
+
