--- a/src/styles/_tooltips.sass
+++ b/src/styles/_tooltips.sass
@@ -98,3 +98,9 @@
       border-width: 0.5rem 0 0.5rem 0.4em
       left: 3px
       top: 0
+
+
+.sidebarLinkButtonsTooltipContainer
+  left: -27px !important
+
+
