--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -5,6 +5,7 @@ $primary-color-hover: #596785
 $primary-color-active: #3B4661
 $secondary_color: #9398A2
 $light-gray: #CACACA
+$light-gray-lighten: #d7d7d7
 $lightest-gray: #EBEEF4
 $white: #FFFFFF
 $dirty-white: #F8F8F8
