[+]#SQUAD-136 - Added sidebar preloader

--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -22,6 +22,9 @@
 .h-66
   height: 66%
 
+.w-33
+  width: 33%
+
 .full_width
   width: 100%
 
@@ -36,3 +39,9 @@
 .rotate-270
   transform: rotate(270deg)
   transition: transform 0.4s ease
+
+.preloaderOverlay-light
+  background-color: rgba(255, 255, 255, 0.6)
+
+.preloaderOverlay-dark
+  background-color: rgba(73, 85, 112, 0.8)
