[*]#SQUAD-136 - Fixed sidebar project's placeholder

--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectPlaceholder/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectPlaceholder/style.module.sass
@@ -1,8 +1,8 @@
 .wrapper
   padding-top: 14px
   padding-bottom: 14px
-  height: 79px
   border-bottom: 1px solid lighten(#838995, 30%)
+  height: 72px
 
 .container
   height: 100%
@@ -17,3 +17,7 @@
   background-color: lightgray
   width: 70%
   height: 20px
+
+.h_79
+  height: 79px
+
