[+]#SQUAD-136 - Added scrollbar for team changing dropdown

--- a/src/components/SidebarWrapper/_components/LinkButton/style.module.sass
+++ b/src/components/SidebarWrapper/_components/LinkButton/style.module.sass
@@ -5,7 +5,6 @@
   width: 14px
   height: 14px
   border-radius: 50%
-  //background-color: yellow
   display: flex
   justify-content: center
   align-items: center
@@ -22,3 +21,9 @@
 
 .icon
   height: 24px
+
+.title
+  transition: color .2s ease-out
+
+.white_font
+  color: #fff !important
