[+]#SQUAD-250 - Adde user avatar delete

--- a/src/components/GlobalMessage/style.module.sass
+++ b/src/components/GlobalMessage/style.module.sass
@@ -18,10 +18,10 @@
 .icon
   width: 28px
   height: 28px
-  fill: $white
+  //fill: $white
 
 .text
-  color: #FFFFFF
+  //color: #FFFFFF
   font-size: 15px
   line-height: 18px
   font-weight: 400
