--- a/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
+++ b/src/components/Modal/_components/UserSettings/_components/UserTabs/UserProfile/_components/UserProfileAvatar/style.module.sass
@@ -33,8 +33,14 @@
   font-weight: 400
   line-height: 16px
 
-.label:hover
+.label:hover, .avatar_delete:hover
   text-decoration: underline
 
 .file_input
   display: none
+
+.avatar_delete
+  color: $scarlet
+  font-size: 14px
+  font-weight: 400
+  line-height: 16px
