[*]#SQUAD-315 - Changing app color

--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsHeadline/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsHeadline/style.module.sass
@@ -21,7 +21,7 @@
     font-size: 16px
     line-height: 19px
     width: 100%
-    color: #9199A9
+    //color: #9199A9
     transition: color 0.2s ease
     overflow: hidden
     text-overflow: ellipsis
