--- a/src/pages/HomePage/style.module.sass
+++ b/src/pages/HomePage/style.module.sass
@@ -1,5 +1,5 @@
 .wrapper
-  background-color: $primary_color
   height: 100%
   position: relative
   z-index: 14
+  transition: background-color .2s ease-in-out
