--- a/src/components/SidebarWrapper/style.module.sass
+++ b/src/components/SidebarWrapper/style.module.sass
@@ -3,10 +3,9 @@
 .sidebar
   width: 100%
   max-width: 88px
-  background-color: $primary_color
   box-shadow: 0 2px 12px 0 rgba(0,0,0,0.44)
   z-index: 15
-  transition: max-width .1s ease-in-out
+  transition: max-width .1s ease-in-out, background-color .2s ease-in-out
   position: relative
 
 .sidebar_shown
