[*]#SQUAD-315 - Changing app color (preloader)

--- a/src/components/SidebarWrapper/_components/LinkButton/style.module.sass
+++ b/src/components/SidebarWrapper/_components/LinkButton/style.module.sass
@@ -11,7 +11,7 @@
   position: absolute
   right: 25%
   bottom: 35%
-  background-color: $primary_color
+  transition: background-color .2s ease-in-out
 
 .circle
   width: 12px
