--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsBoard/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsBoard/style.module.sass
@@ -8,20 +8,9 @@
   width: 7px
   height: 7px
   border-radius: 50%
-  background-color: #9199A9
   transition: all .2s ease
 
-.board
-  p
-    color: #9199A9
-    font-size: 14px
-    font-weight: 400
-    transition: all .2s ease
-
-.checked
-
-  &_circle
-    background-color: #fff
-
-  &_title
-    color: #fff !important
+.text
+  font-size: 14px
+  font-weight: 400
+  transition: all .2s ease
