--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -22,3 +22,6 @@ $red: #F14336
 $pale-red: #FF778C
 $yellow: #FBBB00
 $scarlet: #E76A7D
+$scarlet-disabled: #ef9fab
+$scarlet-hover: #E76A7D
+$scarlet-active: #fae1e4
