--- a/src/components/SidebarWrapper/_components/TeamsButtons/style.module.sass
+++ b/src/components/SidebarWrapper/_components/TeamsButtons/style.module.sass
@@ -1,5 +1,3 @@
-@import '@styles/_animations.sass'
-
 .container
   overflow: hidden
   border-top: 1px solid rgba(147, 152, 162, 0.2)
@@ -25,14 +23,14 @@
   margin: 0 !important
   border-left: .5px solid rgba(147, 152, 162, 0.2) !important
 
-.add_projects:hover, .choose_team:hover
-  background-color: $primary-color-hover
-
-.add_projects:active, .choose_team:active
-  background-color: $primary-color-active
+//.add_projects:hover, .choose_team:hover
+//  background-color: $primary-color-hover
+//
+//.add_projects:active, .choose_team:active
+//  background-color: $primary-color-active
 
 .add_projects p, .choose_team p
-  color: $secondary_color
+  //color: $secondary_color
   font-size: 13px
   line-height: 20px
   font-weight: 400
@@ -40,9 +38,6 @@
 .shown
   display: flex
   width: 50%
-  //min-width: 136px
-  ////max-width: 50%
-  //flex-direction: row
 
 .hidden
   display: flex
@@ -50,6 +45,7 @@
   flex-direction: column
   border-right: none !important
   border-left: none !important
+
   svg
     margin: 0 !important
 
